# ocpp-gw

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  design.md
.cursor/rules/: my-rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.kiro/specs/ocpp-gateway-middleware/: design.md  requirements.md  tasks.md
config/: csms.yaml  system.yaml
config/devices/: sample_device.yaml
config/templates/: echonet_lite_charger.yaml  echonet_lite_charger_discharger.yaml  echonet_lite_template.yaml  modbus_tcp_template.yaml
docs/: developer_guide.md  source_code_overview.md  user_guide.md
examples/: CMakeLists.txt  mapping_hot_reload_example.cpp  websocket_client_example.cpp
include/ocpp_gateway/api/: admin_api.h  cli_manager.h  web_ui.h
include/ocpp_gateway/common/: application.h  config_manager.h  config_types.h  csms_config.h  device_config.h  error.h  error_handling.h  file_watcher.h  i18n_manager.h  language_manager.h  logger.h  metrics_collector.h  prometheus_exporter.h  rbac_manager.h  service_manager.h  system_config.h  tls_manager.h  types.h
include/ocpp_gateway/device/: device_adapter.h  echonet_lite_adapter.h  modbus_rtu_adapter.h  modbus_tcp_adapter.h
include/ocpp_gateway/mapping/: mapping_engine.h
include/ocpp_gateway/ocpp/: boot_notification.h  evse_state_machine.h  heartbeat.h  mapping_config.h  message.h  message_factory.h  ocpp_client_manager.h  ocpp_message_handlers.h  ocpp_message_processor.h  status_notification.h  transaction_event.h  variable_translator.h  websocket_client.h
requirement/: requirement.md
scripts/: ocpp-gateway.service
simulators/: README.md
simulators/echonet-simulator/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
simulators/echonet-simulator/config/: default.yaml
simulators/echonet-simulator/src/: index.ts
simulators/echonet-simulator/src/classes/: EVCharger.ts
simulators/echonet-simulator/src/types/: echonet.ts
simulators/oss-csms/: README.md  VISUALIZATION_GUIDE.md
simulators/oss-csms/docker/: README.md  docker-compose.yml
simulators/oss-csms/everest/: setup.sh
simulators/oss-csms/python-ocpp/: CHARGING_SIMULATION_GUIDE.md  charge_point.py  charging_simulator.py  csms_server.py  requirements.txt  setup.sh  simple_charge_point.py  simple_csms.py  test_charge_point.py  web_dashboard.py
simulators/oss-csms/python-ocpp/templates/: dashboard.html
src/: CMakeLists.txt  main.cpp
src/api/: admin_api.cpp  cli_manager.cpp  web_ui.cpp
src/common/: application.cpp  config_manager.cpp  csms_config.cpp  device_config.cpp  error_handling.cpp  file_watcher.cpp  i18n_manager.cpp  language_manager.cpp  language_manager.h  logger.cpp  metrics_collector.cpp  prometheus_exporter.cpp  rbac_manager.cpp  service_manager.cpp  system_config.cpp  tls_manager.cpp
src/device/: device_adapter.cpp  echonet_lite_adapter.cpp  modbus_rtu_adapter.cpp
src/mapping/: mapping_engine.cpp
src/ocpp/: boot_notification.cpp  evse_state_machine.cpp  heartbeat.cpp  mapping_config.cpp  message.cpp  message_factory.cpp  ocpp_client_manager.cpp  ocpp_message_handlers.cpp  ocpp_message_processor.cpp  status_notification.cpp  transaction_event.cpp  variable_translator.cpp  websocket_client.cpp
tests/: CMakeLists.txt  simple_test_runner.cpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_sample.cpp
tests/unit/api/: admin_api_test.cpp  admin_api_test_extended.cpp  cli_manager_i18n_test.cpp  cli_manager_test.cpp  cli_manager_test_extended.cpp  web_ui_i18n_test.cpp  web_ui_test.cpp  web_ui_test_extended.cpp
tests/unit/common/: config_test.cpp  language_manager_test.cpp  logger_test.cpp  metrics_collector_test.cpp  metrics_collector_test_extended.cpp
tests/unit/device/: device_adapter_test.cpp  echonet_lite_adapter_test.cpp  modbus_rtu_adapter_test.cpp
tests/unit/ocpp/: evse_state_machine_test.cpp  mapping_config_hot_reload_test.cpp  mapping_config_test.cpp  message_test.cpp  ocpp_client_manager_evse_test.cpp  ocpp_client_manager_test.cpp  ocpp_message_processor_test.cpp  variable_translator_test.cpp  websocket_client_test.cpp
work_log/: 20241220_1400_improvements.md  20241220_1500_task_analysis.md  20241220_1600_api_implementation.md  20241220_1600_github_preparation.md  20241220_1630_license_change.md  20241220_1700_implementation_completion.md  20241220_1800_final_implementation.md  20241221_1000_project_review.md  20241221_1100_cicd_fix.md  20241221_1200_cicd_fix.md  20241221_1300_echonet_mapping_fix.md  20241221_1400_cpp17_compatibility_fix.md  20241221_1500_cicd_build_fix.md  20241221_1500_cicd_fix.md  20241221_1600_cicd_comprehensive_fix.md
